Updated website content

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vistabuzz </title>
-    <meta name="description" content="Professional portfolio of Jai Prakash, Frontend Developer with 20 months experience in React.js, JavaScript, and modern web development. View projects and get in touch." />
+    <title>Jai Prakash | Software Engineer & Frontend Developer</title>
+    <meta name="description" content="Jai Prakash - Software Engineer specializing in React.js, TypeScript, and modern frontend development. Based in Bengaluru, India." />
     <meta name="author" content="Jai Prakash" />
+    <meta name="keywords" content="Jai Prakash, Software Engineer, Frontend Developer, React.js, TypeScript, JavaScript, Web Developer, Bengaluru" />
 
-    <meta property="og:title" content="Jai Prakash - Frontend Developer Portfolio" />
-    <meta property="og:description" content="Professional portfolio showcasing frontend development projects and expertise in React.js" />
+    <meta property="og:title" content="vistabuzz" />
+    <meta property="og:description" content="Software Engineer specializing in React.js, TypeScript, and modern frontend development. Based in Bengaluru, India." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+   
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Jai Prakash | Software Engineer" />
+    <meta name="twitter:description" content="Software Engineer specializing in React.js, TypeScript, and modern frontend development." />
+    
+
+    <link rel="canonical" href="/" />
   </head>
 
   <body>
