--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jai Prakash | Software Engineer & Frontend Developer</title>
-    <meta name="description" content="Jai Prakash - Software Engineer specializing in React.js, TypeScript, and modern frontend development. Based in Bengaluru, India." />
-    <meta name="author" content="Jai Prakash" />
-    <meta name="keywords" content="Jai Prakash, Software Engineer, Frontend Developer, React.js, TypeScript, JavaScript, Web Developer, Bengaluru" />
+    <title>VistaBuzz </title>
+    <meta name="description" content="VistaBuzz " />
+    <meta name="author" content="VistaBuzz" />
+    <meta name="keywords" content="VistaBuzz" />
 
     <meta property="og:title" content="vistabuzz" />
-    <meta property="og:description" content="Software Engineer specializing in React.js, TypeScript, and modern frontend development. Based in Bengaluru, India." />
+    <meta property="og:description" content="Software Engineer specializing " />
     <meta property="og:type" content="website" />
    
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Jai Prakash | Software Engineer" />
+    <meta name="twitter:title" content="VistaBuzz " />
     <meta name="twitter:description" content="Software Engineer specializing in React.js, TypeScript, and modern frontend development." />
     
 
